Implement user preferences

--- a/app/src/main/res/layout/activity_preference_list.xml
+++ b/app/src/main/res/layout/activity_preference_list.xml
@@ -6,6 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbarlayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
@@ -24,7 +25,7 @@
         android:id="@+id/preference_listview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="5dp"/>
+        android:layout_below="@id/appbarlayout"/>
 
 
 </RelativeLayout>
